syntax = "proto3";

package core;

import "room.proto";
import "guest.proto";

message SignalRequest {
    string participant_id = 1;
    string room_id =  4;
    oneof request {
        StartSession start_session = 2;
        CloseSession close_session = 3;
        AnswerGuestRequest answer_guest_request = 5;
    }
    // NEXT ID: 6
}

message SignalResponse {
    string participant_id = 1;
    string room_id =  4;
    oneof response {
        JoinResponse join_response = 2;
        RefreshToken refresh_token = 3;
        RoomUpdated room_updated = 5; 
        ParticipantConnected participant_connected = 6; 
        ParticipantUpdated participant_updated = 7; 
        ParticipantDisconnected participant_disconnected = 8; 
        NewGuestRequest new_guest_request = 9; 
        GuestReqCancelled guest_request_cancelled = 10; 
    }
}

message StartSession {
    string id = 1;
    string name = 2;
    ParticipantPermissions permissions = 3;
    string node_id = 4;
}

message JoinResponse {
    Room room = 1;
    repeated Participant participants = 2;
    repeated Guest guests = 3;
}

message CloseSession {}

message RefreshToken {
    string token = 1;  
}

message RoomUpdated {
    Room room = 1;
}

message ParticipantConnected {
    Participant participant = 1;
}

message ParticipantUpdated {
    Participant participant = 1;
}

message ParticipantDisconnected {
    string participant_id = 1;
}

message NewGuestRequest {
    Guest guest = 1; 
}

message AnswerGuestRequest {
    string guest_id = 1;
    oneof answer {
        GuestAccepted guest_accepted = 2;       
        GuestDenied guest_denied = 3;       
    }
}

message GuestAccepted {}

message GuestDenied {}

message GuestReqCancelled {
    string guest_id = 1;
}